--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-    <meta http-equiv="refresh" content="0;URL='http://404.example.com/'" />    
+    <meta http-equiv="refresh" content="0;URL='http://404.yeahgames.net/'" />    
